changing href so htmlpreview might work?

--- a/eat-game.html
+++ b/eat-game.html
@@ -54,7 +54,7 @@
 			document.write(key);
 		</script>" appear?</td></tr>
 		<tr><td id="answer">
-		<a onclick="setText('answer', 'A: ' + prettyPrint(value))" href="#">Click here for the answer</a>
+		<a onclick="setText('answer', 'A: ' + prettyPrint(value))" href="javascript:void(0)">Click here for the answer</a>
 		</td></tr>
 		<tr><td>(Reload for another round)</td></tr>
 		</table>
