--- a/eat-game.html
+++ b/eat-game.html
@@ -2,7 +2,7 @@
 	<head>
 		<script src="./eat-lyrics.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			var count = 2;
+			var count = 2; //Default count
 			
 			var populate = function(grams) {
 				var reverseIndex = {};
